downgrade java version to 11